fixed code to submit data from newFriend but only scores are parsed when I checked on Postman.

--- a/app/public/home.html
+++ b/app/public/home.html
@@ -12,7 +12,6 @@
     <style type="text/css">
         .jumbotron {
             margin-top: 20px;
-            background-image: url("../public/feet.jpg");
             background-size: cover;
             font-family: 'Lilita One', cursive;
             color: black;
@@ -28,7 +27,7 @@
             <p class="text-center">When you feel you need a friend</p>
             <hr class="text-center">
             <p class="text-center">but can't find a match...</p>
-            <a href="../public/survey.html" class="btn btn-danger btn-lg" href="#" role="button">Press Button</a>
+            <a href="/survey" class="btn btn-danger btn-lg" href="#" role="button">Press Button</a>
         </div>
 
     </div>
