--- a/app/public/home.html
+++ b/app/public/home.html
@@ -35,7 +35,7 @@
     <footer class="footer">
         <div class="container">
             <p>
-                <a href="/api/specialfriends">API Friends List</a> |
+                <a href="/api/friends">API Friends List</a> |
                 <a href="https://github.com/chupacobres/chupacobres-friend-finder">GitHub Repository</a>
             </p>
         </div>
