--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -14,12 +14,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
         integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/js/bootstrap.min.js"
         integrity="sha384-o+RDsa0aLu++PJvFqy8fFScvbHFLtbvScb8AjopnFD+iEQ7wo/CG0xlczd+2O/em"
         crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Lilita+One&display=swap" rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script>
+    
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js"></script> -->
 
     <style type="text/css">
         body {
@@ -43,13 +44,10 @@
 
 
 
-        <div class="input-group mb-3">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="name">Name</span>
-            </div>
-            <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
-        </div>
-
+        <div class="input-form-group">
+            <label for="name">Name</label>
+            <input type="name" class="form-control" id="name">
+          </div>
         <br>
 
         <div class="input-group mb-3">
@@ -213,13 +211,13 @@
 
 
         <button type="submit" class="btn btn-primary btn-lg" id="submitBtn">Submit</button>
-        <!-- Modal after survey completion -->
         <div id="specialFriendModal" class="modal fade" role="dialog">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
+                        <h3 class="modal-title">You are matched to...</h3>
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
-                        <h3 class="modal-title">You are matched to...</h1>
+                        
                     </div>
                     <div class="modal-body">
                         <h2 id="specialFriend"></h2>
@@ -234,7 +232,7 @@
         <footer class="footer">
             <div class="container">
                 <p>
-                    <a href="/api/specialfriends">API Friends List</a> |
+                    <a href="/api/friends">API Friends List</a> |
                     <a href="https://github.com/chupacobres/chupacobres-friend-finder">GitHub Repo</a>
                 </p>
             </div>
@@ -246,8 +244,6 @@
     <script type="text/javascript">
         $("#submitBtn").on("click", function (event) {
             event.preventDefault();
-
-            var valid = true;
 
             var newFriend = {
                 name: $("#name").val().trim(),
@@ -264,11 +260,12 @@
                     $("#inputGroupSelect10").val()
                 ]
             };
-            var currentURL = window.location.origin;
+            // var currentURL = window.location.origin;
             $.post('/api/friends', newFriend)
                 .done(function (data) {
+                    console.log(data);
                     $('#specialFriend').html(data.name);
-                    $('#specialFriendModal').modal('open');
+                    $('#specialFriendModal').modal('show');
                 });
 
         });
